EBookStoreProject/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebookstore-service
  namespace: ebookstore
spec:
  selector:
    app: ebookstore-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
