EBookStoreProject/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebookstore-ingress
  namespace: ebookstore
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ebookstore.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ebookstore-service
            port:
              number: 80
